toList not found fix (now Collectors.toList is used)